--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-reveal": "^1.2.2",
-    "sass": "^1.30.0"
+    "react-slick": "^0.27.13",
+    "sass": "^1.30.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "10.0.2",
